added count apis
